@@ -4318,13 +4318,12 @@ FT_BEGIN_HEADER
    *     property `no-stem-darkening` provided by the 'autofit', 'cff',
    *     'type1', and 't1cid' modules; see @no-stem-darkening).
    *
-   *   * @FT_PARAM_TAG_LCD_FILTER_WEIGHTS (LCD filter weights, corresponding
-   *     to function @FT_Library_SetLcdFilterWeights).
-   *
    *   * @FT_PARAM_TAG_RANDOM_SEED (seed value for the CFF, Type~1, and CID
    *     'random' operator, corresponding to the `random-seed` property
    *     provided by the 'cff', 'type1', and 't1cid' modules; see
    *     @random-seed).
+   *
+   *   * @FT_PARAM_TAG_LCD_FILTER_WEIGHTS (no longer supported).
    *
    *   Pass `NULL` as `data` in @FT_Parameter for a given tag to reset the
    *   option and use the library or module default again.
@@ -4352,25 +4351,17 @@ FT_BEGIN_HEADER
    *     FT_Bool              darken_stems = 1;
    *
    *     FT_Parameter         property2;
-   *     FT_LcdFiveTapFilter  custom_weight =
-   *                            { 0x11, 0x44, 0x56, 0x44, 0x11 };
-   *
-   *     FT_Parameter         property3;
    *     FT_Int32             random_seed = 314159265;
    *
-   *     FT_Parameter         properties[3] = { property1,
-   *                                            property2,
-   *                                            property3 };
+   *     FT_Parameter         properties[2] = { property1,
+   *                                            property2 };
    *
    *
    *     property1.tag  = FT_PARAM_TAG_STEM_DARKENING;
    *     property1.data = &darken_stems;
    *
-   *     property2.tag  = FT_PARAM_TAG_LCD_FILTER_WEIGHTS;
-   *     property2.data = custom_weight;
-   *
-   *     property3.tag  = FT_PARAM_TAG_RANDOM_SEED;
-   *     property3.data = &random_seed;
+   *     property2.tag  = FT_PARAM_TAG_RANDOM_SEED;
+   *     property2.data = &random_seed;
    *
    *     FT_Face_Properties( face, 3, properties );
    *   ```
@@ -4381,7 +4372,7 @@ FT_BEGIN_HEADER
    *     FT_Parameter  property;
    *
    *
-   *     property.tag  = FT_PARAM_TAG_LCD_FILTER_WEIGHTS;
+   *     property.tag  = FT_PARAM_TAG_STEM_DARKENING;
    *     property.data = NULL;
    *
    *     FT_Face_Properties( face, 1, &property );
