@@ -133,11 +133,8 @@ FT_BEGIN_HEADER
    *   FT_PARAM_TAG_LCD_FILTER_WEIGHTS
    *
    * @description:
-   *   An @FT_Parameter tag to be used with @FT_Face_Properties.  The
-   *   corresponding argument specifies the five LCD filter weights for a
-   *   given face (if using @FT_LOAD_TARGET_LCD, for example), overriding the
-   *   global default values or the values set up with
-   *   @FT_Library_SetLcdFilterWeights.
+   *   Overriding global LCD filter weights with custom values for a given
+   *   face is no longer supported and ignored.
    *
    * @since:
    *   2.8
