@@ -5,6 +5,10 @@ CHANGES BETWEEN 2.14.1 and 2.14.2 (2026-Mmm-DD)
   - Several  changes  related  to  LCD  filtering  are implemented  to
     achieve better performance and encourage sound practices.
 
+    . Setting the filter weights with FT_Face_Properties  is no longer
+      supported.  The default and light filters  are optimized to work
+      with any face.
+
     . The legacy libXft LCD filter algorithm is no longer provided.
 
 
